@@ -1,6 +1,6 @@
 from django import http
 from django.contrib import admin
-from django.urls import include, path
+from django.urls import path
 from django.views.generic import RedirectView
 
 from linkcheck.tests.sampleapp import views
@@ -11,7 +11,6 @@ def handler404(*args, **kwargs):
 
 
 urlpatterns = [
-    path('admin/linkcheck/', include('linkcheck.urls')),
     path('admin/', admin.site.urls),
     path('public/', views.http_response, {'code': '200'}),
     path('http/<int:code>/', views.http_response),
